// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/LayoutPanel Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-layout-panel"
  >
    <div
      className="fd-layout-panel__header"
    >
      <div
        className="fd-layout-panel__head"
      >
        <h3
          className="fd-layout-panel__title"
        >
          LayoutPanel Header with Actions
        </h3>
        <p
          className="fd-layout-panel__description"
        >
          LayoutPanel Description
        </p>
      </div>
      <div
        className="fd-layout-panel__actions"
      >
        <div>
          LayoutPanel actions
        </div>
      </div>
    </div>
    <div
      className="fd-layout-panel__filters"
    >
      <div>
        LayoutPanel Filters
      </div>
    </div>
    <div
      className="fd-layout-panel__body"
    >
      <div>
        LayoutPanel Body
      </div>
    </div>
    <div
      className="fd-layout-panel__footer"
    >
      LayoutPanel Footer
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/LayoutPanel Single Layout Panel 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-layout-panel"
  >
    <div
      className="fd-layout-panel__header"
    >
      <div
        className="fd-layout-panel__head"
      >
        <h3
          className="fd-layout-panel__title"
        >
          LayoutPanel Header with Actions
        </h3>
        <p
          className="fd-layout-panel__description"
        >
          LayoutPanel Description
        </p>
      </div>
      <div
        className="fd-layout-panel__actions"
      >
        <button
          className="fd-button fd-button--compact sap-icon--add"
          type="button"
        >
          Add New Button
        </button>
      </div>
    </div>
    <div
      className="fd-layout-panel__filters"
    >
      <div>
        LayoutPanel Filters
      </div>
      <br />
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup={true}
              className="fd-button"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              Color
            </button>
          </div>
        </div>
      </div>
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup={true}
              className="fd-button"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              Size
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-layout-panel__body"
    >
      <div>
        LayoutPanel Body
      </div>
      <br />
      <div
        className="fd-tile"
        role="button"
        tabIndex="0"
      >
        <div
          className="fd-tile__header"
        >
          <div
            className="fd-tile__title"
          >
            Tile Title
            <span
              className="fd-avatar fd-avatar--l fd-avatar--thumbnail fd-avatar--circle"
              role="presentation"
              style={
                Object {
                  "backgroundImage": "url(./assets/nature.jpg)",
                }
              }
            />
          </div>
        </div>
        <div
          className="fd-tile__content"
        >
          <p>
            Tile Description
          </p>
        </div>
      </div>
    </div>
    <div
      className="fd-layout-panel__footer"
    >
      LayoutPanel Footer
    </div>
  </div>
</div>
`;
